--- a/wordpress-compose/docker-compose.yml
+++ b/wordpress-compose/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     image: wordpress:latest
     volumes:
-      - /Users/vivabm/Docker/Wordpress:/var/www/html
+      - /Users/${whoami}/Docker/Wordpress:/var/www/html
     ports:
       - "44444:80"
     restart: always
@@ -12,7 +12,7 @@ services:
         WORDPRESS_DB_HOST: 172.30.1.10:59073
         WORDPRESS_DB_NAME: Wordpress
         WORDPRESS_DB_USER: word
-        WORDPRESS_DB_PASSWORD: "B9037!m8947#" 
+        WORDPRESS_DB_PASSWORD: "비밀번호" 
      
 
 # $docker-compose up 
