--- a/Wordpress/docker-compose.yml
+++ b/Wordpress/docker-compose.yml
@@ -1,18 +1,19 @@
-version: "3.7"
+version: "3.1"
 
 services:
   app:
     image: wordpress:latest
+    container_name: viv-wordpress
+    hostname: wordpress
     volumes:
-      - /Users/${whoami}/Docker/Wordpress:/var/www/html
+      - ~/Docker/Wordpress/html:/var/www/html
     ports:
-      - "44444:80"
-    restart: always
+      - "22220:80"
+    restart: unless-stopped
     environment:
-        WORDPRESS_DB_HOST: 172.30.1.10:59073
-        WORDPRESS_DB_NAME: Wordpress
-        WORDPRESS_DB_USER: word
-        WORDPRESS_DB_PASSWORD: "비밀번호" 
-     
+        WORDPRESS_DB_HOST: 192.168.0.8:59073
+        WORDPRESS_DB_NAME: wordpress
+        WORDPRESS_DB_USER: wordpress
+        WORDPRESS_DB_PASSWORD: "<MySQL?DB%Password>" 
 
 # $docker-compose up 
